# lantern

./: .gitignore  README.md  lantern_entry.py  lantern_gui_entry.py  pyproject.toml
docs/: research.md
examples/: sample-arp.csv  sample-nmap.xml
src/lantern/: __init__.py  cli.py  gui.py  inventory.py  report.py  risk.py  scanner.py
tests/: test_cli.py  test_inventory.py  test_scanner.py
